
8.05  2018-10-25
  - Updated FAQ with a warning not to use Perl 5.10.x and 5.12.x with
    Mojolicious.

8.04  2018-10-21
  - Added EXPERIMENTAL module Mojo::DynamicMethods. (mst)
  - Replaced all uses of AUTOLOAD with a much faster alternative, so helpers are
    faster by up to 400% and stack traces contain more information. (mst)
  - Removed experimental status from server method in Mojolicious.

8.03  2018-10-16
  - Added support for weak reference accessors to Mojo::Base. (mst)
  - Updated List::Util requirement to 1.41 for set_subname support.
  - Fixed a small bug in Mojo::UserAgent where request timeouts could be created
    twice.
  - Improved Mojo::Exception to include a stack trace in verbose output.
  - Improved Mojolicious::Types to use the correct MIME types for woff and
    woff2 files.

8.02  2018-10-01
  - Deprecated Mojo::Transaction::success in favor of Mojo::Transaction::result
    and Mojo::Transaction::error. Unfortunately this method is used a lot in
    legacy code, so this deprecation will be in effect until the next major
    release.
  - Added support for gzip compression of dynamically generated responses
    (enable with $app->renderer->compress(1)).
  - Added EXPERIMENTAL compress attribute to Mojolicious::Renderer.
  - Added compressed attribute to Mojo::UserAgent::Transactor.
  - Added EXPERIMENTAL respond method to Mojolicious::Renderer.
  - Added save_to method to Mojo::Message.
  - Added gunzip and gzip methods to Mojo::ByteStream.
  - Added gunzip and gzip functions to Mojo::Util.
  - Improved HTML5.2 compliance of Mojo::DOM::HTML.
  - Fixed a bug in Mojo::Transaction::HTTP that prevented the finish event in
    Mojo::Message::Request from getting emitted sometimes.
  - Fixed a bug in Mojo::Promise where the ioloop attribute was not a weakened
    reference after object construction.
  - Fixed a bug where the is_fresh helper could only handle If-None-Match
    headers with a single etag value.

8.01  2018-09-25