@@ -5,7 +5,6 @@ use warnings;
 
 use ExtUtils::MakeMaker;
 
-# Pod::Simple 3.09 first shipped with Perl 5.11.2
 # JSON::PP 2.27103 first shipped with Perl 5.13.9
 # Time::Local 1.2 first shipped with Perl 5.13.9
 # List::Util 1.41 first shipped with Perl 5.21.4
@@ -37,7 +36,6 @@ WriteMakefile(
     'IO::Socket::IP' => '0.37',
     'List::Util'     => '1.41',
     'JSON::PP'       => '2.27103',
-    'Pod::Simple'    => '3.09',
     'Time::Local'    => '1.2'
   },
   EXE_FILES => ['script/hypnotoad', 'script/mojo', 'script/morbo'],
