@@ -33,11 +33,6 @@ my $twinkle = {
 
 # Renderer
 plugin EPRenderer => {name => 'twinkle', template => $twinkle};
-plugin 'PODRenderer', no_perldoc => 1;
-plugin 'PODRenderer',
-  name       => 'teapod',
-  preprocess => 'twinkle',
-  no_perldoc => 1;
 
 # Configuration
 app->defaults(foo_test => 23);
@@ -58,12 +53,6 @@ get '/' => {name => '<sebastian>'} => 'index';
 
 get '/advanced' => 'advanced';
 
-get '/docs' => {codename => 'snowman'} => 'docs';
-
-get '/docs2' => {codename => 'snowman'} => 'docs2';
-
-get '/docs3' => sub { shift->stash(codename => undef) } => 'docs';
-
 get '/rest' => sub {
   shift->respond_to(
     foo  => {text => 'foo works!'},
@@ -83,15 +72,6 @@ $t->get_ok('/')->status_is(200)->header_is('X-Append' => 'bar')
 $t->get_ok('/advanced')->status_is(200)->header_is('X-Append' => 'bar')
   ->content_is("&LT;escape me>\n123423");
 
-# Normal "pod" template
-$t->get_ok('/docs')->status_is(200)->content_like(qr!<h3.*>snowman</h3>!);
-
-# Template in "teapod" format
-$t->get_ok('/docs2')->status_is(200)->content_like(qr!<h2.*>snowman</h2>!);
-
-# Empty stash value
-$t->get_ok('/docs3')->status_is(200)->content_like(qr!<h3.*></h3>!);
-
 # REST request for "foo" format
 $t->get_ok('/rest')->status_is(200)->header_is('X-Rest' => 1)
   ->content_is('foo works!');
@@ -99,9 +79,6 @@ $t->get_ok('/rest')->status_is(200)->header_is('X-Rest' => 1)
 # REST request for "html" format
 $t->get_ok('/rest.html')->status_is(200)->header_is('X-Rest' => 1)
   ->content_is('html works!');
-
-# Perldoc browser is disabled
-$t->get_ok('/perldoc')->status_is(404)->content_is("foo not found!\n");
 
 # Exception template with custom format
 $t->get_ok('/dead')->status_is(500)->content_is("foo exception!\n");
@@ -124,13 +101,6 @@ test<%= content %>123\
  *** $i ***
  ** } ***
  ** my $foo = (+*** 23 **-)->();*** *** $foo ***
-
-@@ docs.foo.pod
-% no warnings;
-<%= '=head3 ' . $codename %>
-
-@@ docs2.foo.teapod
-.** '=head2 ' . $codename
 
 @@ exception.foo.ep
 foo exception!
